# Numerical-Methods

./: README.md
Aitken-scheme/: calculateAitkenScheme.m  l2p2.m
Calculation-of-eigenvectors-and-eigenvalues-of-matrices/: danilevskyMethod.m  faddeevMethod.m  krylovMethod.m  lambdaDifferenceMethod.m  leverrierMethod.m  main.m  powerMethod.m  rotationMethod.m
Interpolatyon Lagrangia polynomial/: l2p1.m
Least-squares-approximation/: calculateByAlgebraicPolynomials.m  calculateByOrthogonalPolynomial.m  calculateByOrthogonalPolynomialDisVar.m  calculateByOrthogonalPolynomialLegandra.m  calculateLagrangia.m  l2p4.m
Newton-formula-for-equidistant-nodes/: l2p6.m  newtonFormEquidistantNodes.m
Newton-polynomial-interpolation/: calculateNewtonFormula.m  l2p3.m
Numerical-differentiation/: calculateNewtonDiff.asv  calculateNewtonDiff.m  calculateNewtonDiffTwice.asv  calculateNewtonDiffTwice.m  getSplitDifference.m  main.asv  main.m
Numerical-integration/: README.md
Solving-algebraic-equations-by-Lobachevsky-method/: CMakeLists.txt  equation.h  lobachevskyMethod.h  lobachevskyMethod.m  main.cpp
Solving-nonlinear-equations_Qt/: README.md  Solving-nonlinear-equations_Qt.pro  function.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Solving-systems-of-linear-algebraic-equations/: checkSufficientCondition.m  leverrierMethod.m  main.asv  main.m  simpleIterations.m  squareRootMethod.m  zeidelMethod.asv  zeidelMethod.m
Solving-systems-of-nonlinear-equations/: main.m  newtonMethod.m  simpleIterations.m
Splines/: cubicSpline.m  hermitovSpline.m  l2p5.m  (+2 more)
(+17 files in other folders)
